2003-07-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* global.h, main.c

	Fixed the Norman Walsh stylesheet lookup to use the XML catalog based upon a patch by Varga Robert

2003-07-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-tree-view.c

	Optimised creation by only creating the GtkTreeView after the store is populated

	* cong-primary-window.c

	More debugging options, including ability to select either/both/no editor widget

	* cong-editor-widget.h, cong-editor-widget3-impl.h, cong-editor-widget3.c

	Made the new editor widget be a genuine subclass of GtkDrawingArea, rather than a hack

	* cong-editor-node-text.c

	Improved a cast
	
	* cong-editor-node-element-structural.c

	Click support

	* cong-document.c
		
	Optimised the title bar handling

	* xmldata.c

	Fixed a run-time warning
	
	* cong-editor-widget.h

	New file: declaration of new editor widget

	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.h, cong-editor-widget3.c, cong-marshal.c, cong-marshal.h, global.h

	Support for clicking, dragging selections; editor nodes now know about their parents; text nodes can be coloured; 

	* cong-text-cache.c, cong-text-cache.h, Makefile.am

	New files, for caching the results of stripping surplus whitespace from a string.

2003-07-18  Geert Stappers <Geert.Stappers@xs4all.nl>

	* cong-editor-node-text.c
	Removed NULL paramater when calling function `cong_editor_area_text_new'
	in function `generate_area'.
	
2003-07-18  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-eel.c, cong-eel.h

	Added some debug code to help track down reference leaks
	
	* cong-editor-node-text.c

	Fixed a bug: was failing to clean up signals

	* tree.c, xmldata.c
