@@ -1,5 +1,9 @@
 2003-07-23  David Malcolm <david@davemalcolm.demon.co.uk>
 
+	* cong-util.c, cong-util.h
+
+	New files, taken from parts of main.c and global.h
+
 	* global.h, main.c
 
 	Fixed the Norman Walsh stylesheet lookup to use the XML catalog based upon a patch by Varga Robert
